style(navbar component): overflow on tablet and smarphones has been fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -130,4 +130,7 @@
   .slider-container::-webkit-scrollbar-thumb {
     background-color: rgba(0, 0, 0, 0.2);
   }
+  .h-nav-screen {
+    height: calc(100vh - 48px);
+  }
 }
